Migration to Java